# freetase2-suite

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  STAGING.md  pyproject.toml  tase2-suite
bindings/: pyiec61850_tase2_wrappers.i
config/: blt.conf  environments.json  federation.json  grid.json  grid_utility.json  scada.dnp3-demo.json  scada.json  scada_b.json  scada_utility.json
detect/: README.md  example_alerts.jsonl  example_groundtruth.jsonl  tase2.rules
docs/: Makefile  capture_decode.txt  conf.py  index.md  lab_device_runbook.md  lab_notes.md  proof_client.txt  proof_probe.txt  requirements.txt
hmi/: bridge.py
ingest/: dnp3.py  dnp3_outstation_sim.py  modbus_outstation_sim.py  tags.4plc.example.json  tags.demo.json  tags.dnp3-demo.json  tags.dnp3.example.json  tags.example.json  tags.scada-demo.json  tase2_ingest.py
scenarios/: fdi_cascade.json  fdi_tieline.json  industroyer_sweep.json  recon_collection.json  steady_state.json  stealthy_false_data.json  ukraine2015_blackout.json
scripts/: 00_install_deps.sh  10_build.sh  20_netns_up.sh  21_netns_down.sh  30_run_server.sh  31_run_client.sh  32_capture.sh  33_capture_lan.sh  40_local_test.sh  50_run_hmi.sh  55_run_scada.sh  56_run_scenario.sh  57_run_dnp3_demo.sh  57_run_physics.sh  58_run_dataset.sh  59_score.sh  60_run_ingest.sh  61_run_federation.sh  65_build_docs.sh  70_selftest.sh  gen_certs.sh  gen_server_points.py  gen_utility_model.py  validate_config.py
src/: Makefile  tase2_client.c  tase2_hmi_agent.c  tase2_probe.c  tase2_server.c
suite/: relay.py  (+8 more)
(+76 files in other folders)
